[package]
name = "rtl433-doorbell"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
edition = "2018"
license = "BSD-2-Clause"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
structopt = "0.3.5"
tokio = { version = "0.2.6", features = ["sync", "rt-core", "rt-util", "io-util", "process", "macros"] }
futures = "0.3.1"
libc    = "0.2.66"
